--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 
         <activity android:name=".ui.activity.MainActivity" />
+
+        <activity android:name=".ui.activity.GankItemDetailActivity" />
     </application>
 
 </manifest>
