--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,13 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.0-RC1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.7'
     compile 'com.wang.avi:library:2.1.2'
-
+    compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
 }
