--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
