--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".ui.activity.GankDetailActivity" />
         <activity android:name=".ui.activity.GirlDetailActivity" />
 
-        <service android:name=".sevice.DBService"/>
+        <service android:name=".sevice.DataService"/>
     </application>
 
 </manifest>
